--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Xmas Snow 2016</title>
+    <title>2020 Christmas</title>
     <style>
         * {
             margin: 0;
@@ -73,7 +73,7 @@ function draw() {
     // ctx.fontFamily = 'Segoe UI, sans-serif';
     ctx.font = '48px Segoe UI, sans-serif';
     ctx.fillText('KODEMATE & LAPTRINH.IO', 500, 350);
-    ctx.fillText('Wish you all a Merry Christmas!', 500, 450);
+    ctx.fillText('Merry Christmas and Happy new year', 500, 450);
     for(var i = 0; i < snows.length; i++) {
         snows[i].update();
     }
