--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@ function draw() {
     ctx.drawImage(imgLight, canvas.width - imgLight.width/3, 0, imgLight.width/4, imgLight.height/4);
     // ctx.fontFamily = 'Segoe UI, sans-serif';
     ctx.font = '48px Segoe UI, sans-serif';
-    ctx.fillText('KODEMATE & LAPTRINH.IO', 500, 350);
-    ctx.fillText('Merry Christmas and Happy new year', 500, 450);
+    ctx.fillText('I wish you', 500, 350);
+    ctx.fillText('Merry Christmas and Happy new year!!', 500, 450);
     for(var i = 0; i < snows.length; i++) {
         snows[i].update();
     }
