--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>2020 Christmas</title>
+    <title>Richard Chen 2020 Christmas Wish</title>
     <style>
         * {
             margin: 0;
