--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ function draw() {
     ctx.font = '48px Segoe UI, sans-serif';
     ctx.fillText('Ala Viva and Merry Christmas!', 500, 350);
     ctx.fillText('Go Peddie!', 500, 450);
+    ctx.fillText('By Richard Chen', 350, 350);
     for(var i = 0; i < snows.length; i++) {
         snows[i].update();
     }
